--- a/example-servant-persistent.cabal
+++ b/example-servant-persistent.cabal
@@ -15,12 +15,13 @@ executable example-servant-persistent
   other-modules:       Api
                      , App
                      , Models
-  build-depends:       base >=4.8 && <4.11
+  build-depends:       base >=4.8 && <=5.1
                      , aeson
                      , monad-logger
                      , persistent
                      , persistent-template
                      , persistent-sqlite
+                     , persistent-postgresql
                      , servant
                      , servant-server
                      , string-conversions
@@ -47,6 +48,7 @@ test-suite spec
                      , monad-logger
                      , persistent-template
                      , persistent-sqlite
+                     , persistent-postgresql
                      , transformers
                      , wai
                      , servant
